[package]
name = "inferno"
version = "0.1.0"

description = "Rust port of the FlameGraph performance profiling tool suite"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"

repository = "https://github.com/jonhoo/inferno.git"


keywords = ["perf", "flamegraph", "profiling"]
categories = ["command-line-utilities", "development-tools::profiling", "visualization"]

license = "CDDL-1.0"

[dependencies]
pretty_toa = "1.0.0"

[dependencies.quick-xml]
default-features = false
version = "0.22"

[lib]
name = "inferno"
